# tokio-supervisor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  dyn.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml
crates/tokio-actor/: Cargo.toml
crates/tokio-actor/examples/: blocking_lifecycle.rs  blocking_work.rs  graph_failures.rs  mailbox_backpressure.rs  send_vs_send_when_ready.rs  supervised_ingress.rs
crates/tokio-actor/src/: actor.rs  actor_set.rs  binding.rs  blocking.rs  builder.rs  context.rs  envelope.rs  error.rs  graph.rs  ingress.rs  lib.rs  observability.rs  registry.rs
crates/tokio-actor/tests/: actor_set.rs  graph.rs  registry.rs
crates/tokio-otp/: Cargo.toml
crates/tokio-otp/examples/: dynamic_actors.rs  individual_actor_policies.rs  supervised_actors.rs  supervisor_snapshot_trace.rs
crates/tokio-otp/src/: error.rs  lib.rs  runtime.rs  supervised_actors.rs  supervised_graph.rs
crates/tokio-otp/tests/: dynamic_actors.rs  supervised_actors.rs
crates/tokio-supervisor/: Cargo.toml
crates/tokio-supervisor/benches/: common_flows.rs
crates/tokio-supervisor/examples/: nested_supervisor.rs  one_for_one_restart.rs  shutdown_with_cancellation_token.rs  subscribe_to_snapshots.rs
crates/tokio-supervisor/src/: builder.rs  child.rs  context.rs  error.rs  event.rs  handle.rs  lib.rs  prelude.rs  restart.rs  shutdown.rs  snapshot.rs  strategy.rs  supervisor.rs
crates/tokio-supervisor/src/runtime/: child_runtime.rs  exit.rs  intensity.rs  mod.rs  shutdown.rs  spawn.rs  supervision.rs
crates/tokio-supervisor/tests/: builder.rs  dynamic.rs  intensity.rs  panic.rs  shutdown.rs  snapshot.rs
docs/: SPEC_todo.md
examples/: dynamic_children.rs  metrics.rs  one_for_all_pipeline.rs  one_for_one_restart.rs  per_child_restart_intensity.rs  shutdown_with_cancellation_token.rs  subscribe_to_events.rs  tracing.rs
nix/: crane-checks.nix
src/: builder.rs  child.rs  context.rs  error.rs  event.rs  handle.rs  lib.rs  observability.rs  prelude.rs  restart.rs  shutdown.rs  snapshot.rs  supervisor.rs
src/runtime/: exit.rs  intensity.rs  mod.rs  shutdown.rs  spawn.rs  supervision.rs
tests/: builder.rs  dynamic.rs  intensity.rs  nested.rs  one_for_all.rs  one_for_one.rs  prelude.rs  shutdown.rs
tests/common/: mod.rs
