[package]
name = "tokio-supervisor"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Structured task supervision for Tokio"
readme = "README.md"
keywords = ["tokio", "supervisor", "async", "concurrency"]
categories = ["asynchronous", "concurrency"]

[features]
metrics = ["dep:metrics"]

[dependencies]
metrics = { version = "0.24", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"

[dev-dependencies]
metrics-exporter-prometheus = "0.17"
metrics-util = { version = "0.20", features = ["debugging"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
