[workspace]
default-members = [
    "crates/tokio-supervisor",
    "crates/tokio-actor",
    "crates/tokio-otp",
]
members = [
    "crates/tokio-supervisor",
    "crates/tokio-actor",
    "crates/tokio-otp",
]
resolver = "3"

[workspace.metadata]
name = "tokio-otp"

[workspace.dependencies]
bytes = "1.11.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
metrics-util = { version = "0.20", features = ["debugging"] }
serde_json = "1.0"
slab = "0.4"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-actor = { path = "crates/tokio-actor" }
tokio-supervisor = { path = "crates/tokio-supervisor" }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
