[package]
name = "tokio-actor"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Static actor graphs for Tokio with stable ingress handles"
readme = "../../README.md"
keywords = ["tokio", "actor", "async", "concurrency"]
categories = ["asynchronous", "concurrency"]

[features]
metrics = ["dep:metrics"]

[dependencies]
bytes.workspace = true
metrics = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
tracing-subscriber.workspace = true
