[package]
name = "tokio-otp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "OTP-style runtime for tokio-supervisor and tokio-actor"
readme = "../../README.md"
keywords = ["tokio", "otp", "actor", "supervisor"]
categories = ["asynchronous", "concurrency"]

[features]
metrics = ["tokio-actor/metrics", "tokio-supervisor/metrics"]

[dependencies]
thiserror = "2.0.18"
tokio-actor = { path = "../tokio-actor" }
tokio-supervisor = { path = "../tokio-supervisor" }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
