[package]
name = "tokio-otp"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "OTP-style runtime for tokio-supervisor and tokio-actor"
readme = "../../README.md"
keywords = ["tokio", "otp", "actor", "supervisor"]
categories = ["asynchronous", "concurrency"]

[features]
metrics = ["tokio-actor/metrics", "tokio-supervisor/metrics"]

[dependencies]
thiserror.workspace = true
tokio-actor.workspace = true
tokio-supervisor.workspace = true

[dev-dependencies]
tokio.workspace = true
tokio-util.workspace = true
