[package]
name = "tokio-supervisor"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Structured task supervision for Tokio"
readme = "../../README.md"
keywords = ["tokio", "supervisor", "async", "concurrency"]
categories = ["asynchronous", "concurrency"]

[features]
metrics = ["dep:metrics"]

[dependencies]
metrics = { workspace = true, optional = true }
slab.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true

[[bench]]
name = "common_flows"
harness = false
path = "benches/common_flows.rs"
